# SPAR_measure

./: .gitignore  README.MD  ROADMAP.MD  pyproject.toml  requirements.txt
resources/: Manual.MD  example_colab.ipynb  pypi_intro.MD
src/spar_measure/: gui.py  util_funcs.py  zca.py
src/spar_measure/sample_data/: sample_emb.npy  sample_text.csv
