[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spar_measure"
version = "0.1.7"
authors = [{ name = "Authors", email = "author@example.com" }]
description = "SPAR: Semantic Projection with Active Retrieval"
readme = "resources/pypi_intro.MD"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"spar_measure.sample_data" = ["*.csv", "*.npy", "*.png"]

[project.urls]
"Homepage" = "https://github.com/maifeng/SPAR_measure"
"Bug Tracker" = "https://github.com/maifeng/SPAR_measure/issues"
